novo preço e botao wpp

--- a/css/style.css
+++ b/css/style.css
@@ -2393,3 +2393,23 @@ ul.footer-list li a:hover{
 .service-item h3 {
 	text-align: center;
 }
+
+.float{
+	position:fixed;
+	width:60px;
+	height:60px;
+	bottom:40px;
+	right:40px;
+	background-color:#0C9;
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+	box-shadow: 2px 2px 3px #999;
+}
+
+.my-float{
+	margin-top:10px;
+}
+.float:hover, .float:focus {
+	color: white;
+}
