--- a/css/style.css
+++ b/css/style.css
@@ -673,6 +673,7 @@ ul.footer_social li a i:hover {
 }
 
 h1.home-title{
+	text-shadow: 3px 3px 4px rgba(150, 150, 150, 1);
 	font-size:46px;
 	line-height:54px;
 	font-weight:500;
