--- a/css/style.css
+++ b/css/style.css
@@ -2395,20 +2395,22 @@ ul.footer-list li a:hover{
 	text-align: center;
 }
 
-.float{
+.wpp{
 	z-index: 9999;
 	position:fixed;
 	width:60px;
 	height:60px;
 	bottom:40px;
 	right:40px;
-	background-color:#0C9;
+	background-color:white;
 	color:#FFF;
 	border-radius:50px;
 	text-align:center;
 	box-shadow: 2px 2px 3px #999;
 }
-
+.wpp img {
+	width: 100%;
+}
 .my-float{
 	margin-top:10px;
 }
